Fix Submit bg on Safari

--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -47,6 +47,7 @@
 
   &__submit {
     border: 3px solid $black;
+    background-color: transparent;
     padding: 0.4rem 2.5rem;
     margin-bottom: 20px;
     font-family: "Raleway", sans-serif;
